--- a/action.yaml
+++ b/action.yaml
@@ -39,8 +39,6 @@ runs:
           echo 'Installing all volttron dependencies and RMQ'
           pip install wheel
           python bootstrap.py --all --rabbitmq --force
-          # Until the requirements.py install this here.
-          pip install pytest-rerunfailures
         fi
       shell: bash
       env:
@@ -53,8 +51,6 @@ runs:
           echo 'Installing all Volttron dependencies but NOT RMQ'
           pip install wheel
           python bootstrap.py --all --force
-          # Until the requirements.py install this here.
-          pip install pytest-rerunfailures
         fi
       shell: bash
       env:
@@ -71,9 +67,12 @@ runs:
       run: |
         source env/bin/activate
         pip install -e .
+        # Until the requirements.py install this here.
+        pip install pytest-rerunfailures
         echo "the test path $TEST_PATH and $TEST_OUTPUT_SUFFIX"
-        pytest "$TEST_PATH" --reruns 5 -rf -o junit_family=xunit2 \
-            --junitxml=output/test-$TEST_OUTPUT_SUFFIX-${{ inputs.os }}-${{ inputs.python_version }}-results.xml
+        pytest --reruns 5 --reruns-delay 5 -rf -o junit_family=xunit2 \
+            --junitxml=output/test-$TEST_OUTPUT_SUFFIX-${{ inputs.os }}-${{ inputs.python_version }}-results.xml \
+            "$TEST_PATH"
       shell: bash
       env:
         TEST_PATH: ${{ inputs.test_path }}
