--- a/action.yaml
+++ b/action.yaml
@@ -69,6 +69,7 @@ runs:
         pip install -e .
         # Until the requirements.py install this here.
         pip install pytest-rerunfailures
+        pip list
         echo "the test path $TEST_PATH and $TEST_OUTPUT_SUFFIX"
         pytest --reruns 5 --reruns-delay 5 -rf -o junit_family=xunit2 \
             --junitxml=output/test-$TEST_OUTPUT_SUFFIX-${{ inputs.os }}-${{ inputs.python_version }}-results.xml \
