--- a/action.yaml
+++ b/action.yaml
@@ -64,6 +64,7 @@ runs:
       shell: bash
 
     - name: Run Volttron tests
+      timeout-minutes: 30
       run: |
         source env/bin/activate
         pip install -e .
