--- a/action.yaml
+++ b/action.yaml
@@ -61,6 +61,7 @@ runs:
       run: |
         source env/bin/activate
         pip install -e .
+        pip install backports.zoneinfo
       shell: bash
 
     - name: Run Volttron tests
