--- a/action.yaml
+++ b/action.yaml
@@ -49,6 +49,7 @@ runs:
       run: |
         if [[ ! -f "$FILE" ]] && [[ "$OS" == 'ubuntu-20.04' ]]; then
           echo 'Installing all Volttron dependencies but NOT RMQ'
+          python -m pip install pip --upgrade
           pip install wheel
           python bootstrap.py --all --force
         fi
