--- a/action.yaml
+++ b/action.yaml
@@ -25,9 +25,9 @@ runs:
   steps:
     - name: Install Erlang for RabbitMQ
       run: |
-        if [[ "$OS" != 'ubuntu-20.04' ]]; then
+        if [[ "$OS" == 'ubuntu-20.04' ]]; then
           echo 'Installing erlang'
-          sudo scripts/rabbit_dependencies.sh debian ${{ inputs.os }}
+          sudo scripts/rabbit_dependencies.sh debian focal
         fi
       shell: bash
       env:
@@ -35,7 +35,7 @@ runs:
 
     - name: Install dependencies including rmq
       run: |
-        if [[ ! -f "$FILE" ]] && [[ "$OS" != 'ubuntu-20.04' ]]; then
+        if [[ ! -f "$FILE" ]] && [[ "$OS" == 'ubuntu-20.04' ]]; then
           echo 'Installing all volttron dependencies and RMQ'
           pip install wheel
           python bootstrap.py --all --rabbitmq --force
@@ -47,7 +47,7 @@ runs:
 
     - name: Install dependencies other than rmq
       run: |
-        if [[ ! -f "$FILE" ]] && [[ "$OS" == 'ubuntu-20.04' ]]; then
+        if [[ ! -f "$FILE" ]] && [[ "$OS" != 'ubuntu-20.04' ]]; then
           echo 'Installing all Volttron dependencies but NOT RMQ'
           python -m pip install pip --upgrade
           pip install wheel
