--- a/action.yaml
+++ b/action.yaml
@@ -32,8 +32,12 @@ runs:
           echo 'Clean older version of erlang-base'
           sudo apt-get purge -yf erlang-base
           echo 'Installing erlang'
+          if ! [ -f esl-erlang_25.2-1~ubuntu~focal_amd64.deb ]; then
+            echo "Downloading erlang"
+            wget https://github.com/VOLTTRON/volttron-build-action/blob/local-erlang/erlang/esl-erlang_25.2-1~ubuntu~focal_amd64.deb
+          fi
           #wget https://binaries2.erlang-solutions.com/ubuntu/pool/contrib/e/esl-erlang/esl-erlang_25.2-1~ubuntu~focal_amd64.deb
-          sudo dpkg -i erlang/esl-erlang_25.2-1~ubuntu~focal_amd64.deb
+          sudo dpkg -i esl-erlang_25.2-1~ubuntu~focal_amd64.deb
         fi
         if [[ "$OS" == 'ubuntu-22.04' ]]; then
           echo 'Installing erlang dependencies'
@@ -42,8 +46,12 @@ runs:
           echo 'Clean older version of erlang-base'
           sudo apt-get purge -yf erlang-base
           echo 'Installing erlang'
+          if ! [ -f esl-erlang_25.2-1~ubuntu~focal_amd64.deb ]; then
+            echo "Downloading erlang"
+            wget https://github.com/VOLTTRON/volttron-build-action/blob/local-erlang/erlang/esl-erlang_25.2-1~ubuntu~jammy_amd64.deb
+          fi
           #wget https://binaries2.erlang-solutions.com/ubuntu/pool/contrib/e/esl-erlang/esl-erlang_25.2-1~ubuntu~jammy_amd64.deb
-          sudo dpkg -i erlang/esl-erlang_25.2-1~ubuntu~jammy_amd64.deb
+          sudo dpkg -i esl-erlang_25.2-1~ubuntu~jammy_amd64.deb
         fi
       shell: bash
       env:
